--- a/fpm.toml
+++ b/fpm.toml
@@ -15,6 +15,6 @@ auto-examples = true
 library = false
 
 [dependencies]
-ftools = { git="https://github.com/fedebenelli/ftools" }
-stdlib = { git="https://github.com/fortran-lang/stdlib", branch="stdlib-fpm" }
+# ftools = { git="https://github.com/fedebenelli/ftools" }
+# stdlib = { git="https://github.com/fortran-lang/stdlib", branch="stdlib-fpm" }
 toml-f = { git="https://github.com/toml-f/toml-f" }
