--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,19 +55,19 @@ jobs:
     - name: Run tests
       run: fpm test --profile debug --flag -coverage
 
-    - name: Create coverage report
-      run: |
-        mkdir -p ${{ env.COV_DIR }}
-        lcov --capture --initial --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.base
-        lcov --capture --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.capture
-        lcov --add-tracefile ${{ env.COV_DIR }}/coverage.base --add-tracefile ${{ env.COV_DIR }}/coverage.capture --output-file ${{ env.COV_DIR }}/coverage.info
-      env:
-        COV_DIR: build/coverage
+    # - name: Create coverage report
+    #   run: |
+    #     mkdir -p ${{ env.COV_DIR }}
+    #     lcov --capture --initial --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.base
+    #     lcov --capture --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.capture
+    #     lcov --add-tracefile ${{ env.COV_DIR }}/coverage.base --add-tracefile ${{ env.COV_DIR }}/coverage.capture --output-file ${{ env.COV_DIR }}/coverage.info
+    #   env:
+    #     COV_DIR: build/coverage
 
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v2
-      with:
-        files: build/coverage/coverage.info
+    # - name: Upload coverage report
+    #   uses: codecov/codecov-action@v2
+    #   with:
+    #     files: build/coverage/coverage.info
 
     - name: Build documentation
       run: ford ./simulated-annealing.md
