--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,7 +70,7 @@ jobs:
     #     files: build/coverage/coverage.info
 
     - name: Build documentation
-      run: ford ./simulated-annealing.md
+      run: ford ./docs.md
 
     - name: Deploy Documentation
       if: github.ref == 'refs/heads/master'
