--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,7 +76,8 @@ jobs:
       - name: Build
         id: build
         uses: ResearchSoftwareActions/ford-build@v1
-        project_file: docs.md
+        env:
+          project_file: docs.md
       - name: Deploy
         if: success()
         uses: crazy-max/ghaction-github-pages@v1
