--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,21 +22,20 @@ jobs:
 
     - name: Build Developer Documentation
       run: |
-        mkdir doc
-        ford docs.md
+        ford doc/ford-front-matter.md
 
     - name: Upload Documentation
       uses: actions/upload-artifact@v2
       with:
         name: documentation
-        path: doc
+        path: doc/ford_site
         if-no-files-found: error
 
     - name: Broken Link Check
       if: ${{ github.ref == 'refs/heads/main'}}
       uses: technote-space/broken-link-checker-action@v1
       with:
-        TARGET: file://${{ github.workspace }}/index.html
+        TARGET: file://${{ github.workspace }}/ford_site/index.html
         RECURSIVE: true
         ASSIGNEES: ${{ github.actor }}
 
@@ -45,4 +44,4 @@ jobs:
       if: ${{ github.event_name == 'push'  &&  github.ref == 'refs/heads/main' }}
       with:
         branch: gh-pages
-        folder: doc
+        folder: doc/ford_site
