--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,5 +43,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.0
       if: ${{ github.event_name == 'push'  &&  github.ref == 'refs/heads/main' }}
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         folder: doc/ford_site
