--- a/fpm.toml
+++ b/fpm.toml
@@ -13,3 +13,7 @@ auto-examples = true
 
 [install]
 library = false
+
+[dependencies]
+stdlib = "*"
+test-drive = {git = "https://github.com/fortran-lang/test-drive"}
