getting there, adding tests

--- a/fpm.toml
+++ b/fpm.toml
@@ -6,7 +6,7 @@ maintainer = "federico.benelli@mi.unc.edu.ar"
 copyright = "Copyright 2023, Federico E. Benelli"
 
 [build]
-# link = ["lapack", "openblas"]
+link = ["lapack", "openblas"]
 auto-executables = true
 auto-tests = true
 auto-examples = true
@@ -17,3 +17,4 @@ library = false
 [dependencies]
 stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
+json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
