--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,9 @@ jobs:
     #   run: fpm build --profile release
 
     - name: Run tests
-      run: fpm test --profile debug --flag -coverage
+      run: |
+        fpm test --profile debug --flag -coverage
+        bash ci/ci.sh
 
     # - name: Create coverage report
     #   run: |
