--- a/fpm.toml
+++ b/fpm.toml
@@ -6,7 +6,7 @@ maintainer = "federico.benelli@mi.unc.edu.ar"
 copyright = "Copyright 2023, Federico E. Benelli"
 
 [build]
-link = ["lapack", "openblas"]
+link = ["lapack"]
 auto-executables = true
 auto-tests = true
 auto-examples = true
