ready for first tag

--- a/fpm.toml
+++ b/fpm.toml
@@ -9,12 +9,23 @@ copyright = "Copyright 2023, Federico E. Benelli"
 link = ["lapack"]
 auto-executables = true
 auto-tests = true
-auto-examples = true
+auto-examples = false
 
 [install]
-library = false
+library = true
 
 [dependencies]
 stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
+
+[[example]]
+name       = "benchmark"
+source-dir = "example"
+main       = "demo.f90"
+
+
+[[example]]
+name       = "adiff_new_model"
+source-dir = "example"
+main       = "demo.f90"
