--- a/fpm.toml
+++ b/fpm.toml
@@ -1,6 +1,6 @@
 name = "yaeos"
 version = "0.1.0"
-license = "BSD"
+license = "MPL"
 author = "Federico E. Benelli"
 maintainer = "federico.benelli@mi.unc.edu.ar"
 copyright = "Copyright 2023, Federico E. Benelli"
