--- a/fpm.toml
+++ b/fpm.toml
@@ -14,6 +14,11 @@ auto-examples = false
 [install]
 library = true
 
+[fortran]
+implicit-typing = false
+implicit-external = true
+source-form = "free"
+
 [dependencies]
 stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
