--- a/fpm.toml
+++ b/fpm.toml
@@ -24,13 +24,8 @@ stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 
-[[example]]
-name       = "benchmark"
-source-dir = "example"
-main       = "demo.f90"
-
 
 [[example]]
-name       = "adiff_new_model"
+name       = "example"
 source-dir = "example"
 main       = "demo.f90"
