--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Build Developer Documentation
       run: |
-        ford doc/ford-front-matter.md
+        ford ford.md
 
     - name: Upload Documentation
       uses: actions/upload-artifact@v2
