--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt install -y gfortran-${GCC_V} python3-dev graphviz
-        sudo pip install ford==7.0.5 markdown==3.3.4
+        sudo pip install ford markdown
 
     - name: Build Developer Documentation
       run: |
