--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
-	"name": "feos CodeSpace",
+	"name": "yaeos CodeSpace",
 	"extensions": [
-		"cschleiden.vscode-github-actions",
-		"fortran-lang.linter-gfortran",
-        "ms-vscode.cpptools",
-        "ms-vscode.cpptools-extension-pack"
-
+ 			"fortran-lang.linter-gfortran",
+			"aaron-bond.better-comments",
+			"intel-corporation.oneapi-environment-configurator",
+			"eamodio.gitlens",
+			"GitHub.vscode-pull-request-github",
+			"vscode-icons"
 	],
 	"dockerFile": "Dockerfile"
 }
