--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".vscode"]
 	path = .vscode
-	url = git@github.com:ipqa-research/vscode-fortran.git
+	url = https://github.com/ipqa-research/vscode-fortran.git
