using bobyqa for tpd

--- a/fpm.toml
+++ b/fpm.toml
@@ -23,7 +23,8 @@ source-form = "free"
 stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
-
+nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
+PowellOpt = { git="https://github.com/jacobwilliams/PowellOpt.git" }
 
 [[example]]
 name       = "example"
