--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,8 +49,12 @@ jobs:
            --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-${{ matrix.gcc_v }} \
            --slave /usr/bin/gcov gcov /usr/bin/gcov-${{ matrix.gcc_v }}
 
-    # - name: Compile
-    #   run: fpm build --profile release
+    - name: Install NLopt
+      run:
+        sudo apt-get install nlopt
+
+    - name: Compile
+      run: fpm build --profile release
 
     - name: Run tests
       run: |
