--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Install NLopt
       run:
-        sudo apt-get install nlopt
+        sudo apt-get install libnlopt-dev
 
     - name: Compile
       run: fpm build --profile release
