--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,6 +60,10 @@ jobs:
       run: |
         fpm test --profile debug --flag -coverage
         bash ci/ci.sh
+    
+    - name: Coverage
+      run: bash ci/ci.sh coverage
+
 
     # - name: Create coverage report
     #   run: |
