--- a/fpm.toml
+++ b/fpm.toml
@@ -23,6 +23,7 @@ source-form = "free"
 stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
+forsus = {git="https://github.com/ipqa-research/forsus"}
 
 
 [[example]]
