--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,16 +64,8 @@ jobs:
     - name: Coverage
       run: bash ci/ci.sh coverage
 
-    - name: Create coverage report
-      run: |
-        mkdir -p ${{ env.COV_DIR }}
-        lcov --capture --initial --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.base
-        lcov --capture --base-directory . --directory build/gfortran_*/ --output-file ${{ env.COV_DIR }}/coverage.capture
-        lcov --add-tracefile ${{ env.COV_DIR }}/coverage.base --add-tracefile ${{ env.COV_DIR }}/coverage.capture --output-file ${{ env.COV_DIR }}/coverage.info
-      env:
-        COV_DIR: build/coverage
-
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v2
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
       with:
-        files: build/coverage/coverage.info
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: ipqa-research/yaeos
