module-naming, see how to make this into true

--- a/fpm.toml
+++ b/fpm.toml
@@ -10,6 +10,7 @@ link = ["lapack"]
 auto-executables = true
 auto-tests = true
 auto-examples = false
+module-naming = false
 
 [install]
 library = true
