--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ tools/uml
 tools/uml.png
 tools/uml.svg
 python/yaeos/script.py
+iso
+log
+coverage.xml
+fpm.rsp
+tools/notebooks/sympy-differentiation.ipynb
+tools/notebooks/unifac.ipynb
