--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ coverage.xml
 fpm.rsp
 tools/notebooks/sympy-differentiation.ipynb
 tools/notebooks/unifac.ipynb
+__pycache__
+tools/notebooks/database/molarmass.csv
+tools/notebooks/database/ogUNIFAC/ogUNIFAC_groups.csv
+app/plot
+app/plot.gnu
