--- a/fpm.toml
+++ b/fpm.toml
@@ -1,5 +1,5 @@
 name = "yaeos"
-version = "0.2.0b1"
+version = "0.2.0"
 license = "MPL"
 author = "Federico E. Benelli"
 maintainer = "federico.benelli@mi.unc.edu.ar"
