--- a/fpm.toml
+++ b/fpm.toml
@@ -28,6 +28,26 @@ forsus = {git="https://github.com/ipqa-research/forsus"}
 
 
 [[example]]
-name       = "example"
-source-dir = "example"
+name       = "benchmarks"
+source-dir = "example/extra"
 main       = "demo.f90"
+
+[[example]]
+name       = "basics"
+source-dir = "example/tutorials"
+main       = "basics.f90"
+
+[[example]]
+name       = "saturation_points"
+source-dir = "example/tutorials"
+main       = "saturation_points.f90"
+
+[[example]]
+name       = "phase_envelope"
+source-dir = "example/tutorials"
+main       = "phase_envelope.f90"
+
+[[example]]
+name       = "new_alpha_function"
+source-dir = "example/tutorials"
+main       = "new_alpha_function.f90"
