--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ tools/notebooks/database/molarmass.csv
 tools/notebooks/database/ogUNIFAC/ogUNIFAC_groups.csv
 app/plot
 app/plot.gnu
+test/data/case1.nml
