first draft of fitting module

--- a/fpm.toml
+++ b/fpm.toml
@@ -25,6 +25,7 @@ stdlib = "*"
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
+nlopt-f.git = "https://github.com/grimme-lab/nlopt-f"
 
 
 [[example]]
