--- a/fpm.toml
+++ b/fpm.toml
@@ -22,6 +22,7 @@ source-form = "free"
 
 [dependencies]
 stdlib = "*"
+forbear = {git="https://github.com/szaghi/forbear"}
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
