--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,23 @@ tools/notebooks/database/ogUNIFAC/ogUNIFAC_groups.csv
 app/plot
 app/plot.gnu
 test/data/case1.nml
+10K
+D
+env0.dat
+env1.dat
+env2.dat
+env3.dat
+env4.dat
+env5.dat
+env6.dat
+envel
+fit_case
+fort.1
+fort.2
+hv
+kijvar
+log_srk
+log_srk-hv
+srk
+srk_hv
+fort.2
