--- a/fpm.toml
+++ b/fpm.toml
@@ -1,5 +1,5 @@
 name = "yaeos"
-version = "0.2.0"
+version = "0.3.0"
 license = "MPL"
 author = "Federico E. Benelli"
 maintainer = "federico.benelli@mi.unc.edu.ar"
@@ -23,10 +23,12 @@ source-form = "free"
 [dependencies]
 stdlib = "*"
 forbear = {git="https://github.com/szaghi/forbear"}
-test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
 nlopt-f.git = "https://github.com/grimme-lab/nlopt-f"
+
+[dev-dependencies]
+test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 
 
 [[example]]
