updated C API behaviour

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,7 +1,7 @@
 python:
-	fpm install --profile release --prefix build/python
+	fpm install --flag "-g" --profile debug --prefix build/python
 	f2py -m yaeos \
-		-L ../build/python/lib/libyaeos.a \
-		-I ../build/python/include \
-		-c yaeos_c.f90
+		-L$(PWD)/../build/python/lib/ \
+		-I$(PWD)/../build/python/include \
+		-c yaeos_c.f90 -lyaeos # --debug-capi
 	mv yaeos.* yaeos/
