--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -99,5 +99,5 @@ jobs:
 
     - name: Install yaeos
       run:
-        cd python
-        pip install .
+        - cd python
+        - pip install .
