--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,24 +1,32 @@
 name: CI
 on: [push]
 
+
 jobs:
   Build:
     runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        gcc_v: [10] # Version of GFortran we want to use.
-        python-version: [3.9]
-    env:
-      FC: gfortran-${{ matrix.gcc_v }}
-      GCC_V: ${{ matrix.gcc_v }}
-
+        strategy:
+          fail-fast: false
+          matrix:
+            os: [ubuntu-latest]
+            python-version: [3.9]
+            toolchain:
+              - {compiler: gcc, version: 13}
+              - {compiler: intel-classic, version: '2021.10'}
+              # - {compiler: intel, version: '2023.2'}
+              # - {compiler: nvidia-hpc, version: '23.11'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
         submodules: false
+
+    - name: Setup Fortran Compiler
+        uses: fortran-lang/setup-fortran@v1
+        id: setup-fortran
+        with:
+          compiler: ${{ matrix.toolchain.compiler }}
+          version: ${{ matrix.toolchain.version }}
 
     - name: Install Python
       uses: actions/setup-python@v1 # Use pip to install latest CMake, & FORD/Jin2For, etc.
@@ -34,31 +42,21 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Install Python dependencies
-      if: contains( matrix.os, 'ubuntu')
       run: |
         python -m pip install --upgrade pip
         pip install ford numpy matplotlib gcovr numpy scipy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Install GFortran Linux
-      if: contains( matrix.os, 'ubuntu')
-      run: |
-        sudo apt-get install lcov
-        sudo update-alternatives \
-           --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.gcc_v }} 100 \
-           --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-${{ matrix.gcc_v }} \
-           --slave /usr/bin/gcov gcov /usr/bin/gcov-${{ matrix.gcc_v }}
 
     - name: Install NLopt
       run:
         sudo apt-get install libnlopt-dev
 
     - name: Compile
-      run: fpm build --profile release
+      run: fpm build --profile release --compiler ${{ env.FC }}
 
     - name: Run tests
       run: |
-        fpm test --profile debug --flag -coverage
+        fpm test --profile debug --flag -coverage --compiler ${{ env.FC }}
         bash ci/ci.sh
     
     - name: Coverage
