--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,10 +11,14 @@ jobs:
         os: [ubuntu-latest]
         python-version: [3.9]
         toolchain:
+          - {compiler: gcc, version: 10}
+          - {compiler: gcc, version: 11}
+          - {compiler: gcc, version: 12}
           - {compiler: gcc, version: 13}
-          - {compiler: intel-classic, version: '2021.10'}
-                # - {compiler: intel, version: '2023.2'}
-                # - {compiler: nvidia-hpc, version: '23.11'}
+          - {compiler: intel-classic, version: '2024.1'}
+          - {compiler: intel-classic, version: '2023.2'}
+          - {compiler: intel, version: '2024.1'}
+          - {compiler: intel, version: '2023.2'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
