--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,7 +56,7 @@ jobs:
         sudo apt-get install libnlopt-dev
 
     - name: Compile
-      run: fpm build --profile release --compiler ${{ env.FC }}
+      run: fpm build --profile release --compiler ${{ env.FC }} --c-compiler gcc
 
     - name: Run tests
       run: |
