--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -65,7 +65,7 @@ jobs:
     
     - name: Coverage
       run: bash ci/ci.sh coverage
-      if: ${{ env.FC == "gfortran"}}
+      if: ${{ env.FC == 'gfortran' }}
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
