cov only on gfo

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,6 +68,7 @@ jobs:
       if: ${{ env.FC == 'gfortran' }}
 
     - name: Upload coverage reports to Codecov
+      if: ${{ env.FC == 'gfortran' }}
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
