--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
           - {compiler: gcc, version: 11}
           - {compiler: gcc, version: 12}
           - {compiler: gcc, version: 13}
-          - {compiler: intel-classic, version: '2024.1'}
+          # - {compiler: intel-classic, version: '2024.1'}
           - {compiler: intel, version: '2024.1'}
           - {compiler: intel, version: '2023.2'}
           # - {compiler: intel-classic, version: '2023.2'}
