--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,7 @@ jobs:
           # - {compiler: intel-classic, version: '2024.1'}
           - {compiler: intel, version: '2024.1'}
           - {compiler: intel, version: '2023.2'}
+          - {compiler: nvidia-hpc, version: '23.11'}
           # - {compiler: intel-classic, version: '2023.2'}
     steps:
     - name: Checkout code
