--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,12 +58,18 @@ jobs:
 
         # - name: Compile
         #   run: fpm build --profile release --compiler ${{ env.FC }} --c-compiler gcc
+    
+    - name: Run tests without coverage
+      if: ${{ env.FC != 'gfortran' }}
+      run: |
+        fpm test --profile debug --compiler ${{ env.FC }} --c-compiler gcc
 
-    - name: Run tests
+    - name: Run tests with coverage
+      if: ${{ env.FC == 'gfortran' }}
       run: |
         fpm test --profile debug --flag -coverage --compiler ${{ env.FC }} --c-compiler gcc
         bash ci/ci.sh
-    
+
     - name: Coverage
       run: bash ci/ci.sh coverage
       if: ${{ env.FC == 'gfortran' }}
