--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ srk_hv
 fort.2
 *.egg-info
 *ipynb_checkpoints
+chulia
+flang.rsp
+flash
+flash_log_para
+flash_log_sequ
+fort.4
+log2
+para.py
+tools/plotting/pt_envel_2ph.gnu
+tools/notebooks/other.ipynb
