--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -104,9 +104,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install NLopt
+    - name: Install NLopt and meson
       run:
-        sudo apt-get install libnlopt-dev
+        sudo apt-get install libnlopt-dev meson
 
     - name: Install yaeos
       run:
