--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,19 +46,13 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install ford numpy matplotlib gcovr numpy scipy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Install NLopt
-      run:
         sudo apt-get install libnlopt-dev
 
-        # - name: Compile
-        #   run: fpm build --profile release --compiler ${{ env.FC }} --c-compiler gcc
-    
     - name: Run tests without coverage
       if: ${{ env.FC != 'gfortran' }}
       run: |
@@ -106,6 +100,7 @@ jobs:
 
     - name: Install NLopt and meson
       run:
+        sudo apt-get update && sudo apt-get upgrade
         sudo apt-get install libnlopt-dev meson
 
     - name: Install yaeos
