--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -99,7 +99,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install NLopt and meson
-      run:
+      run: |
         sudo apt-get update && sudo apt-get upgrade
         sudo apt-get install libnlopt-dev meson
 
