--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,8 +100,8 @@ jobs:
 
     - name: Install NLopt and meson
       run: |
-        sudo apt-get update && sudo apt-get upgrade
-        sudo apt-get install libnlopt-dev meson
+        sudo apt-get install libnlopt-dev
+        pip install meson
 
     - name: Install yaeos
       run:
