--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,7 +100,7 @@ jobs:
 
     - name: Install NLopt and meson
       run: |
-        sudo apt-get install libnlopt-dev
+        sudo apt-get install libnlopt-dev meson
         pip install meson
 
     - name: Install yaeos
