--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,7 @@ on: [push]
 
 
 jobs:
-  Fortran:
+  tests_and_coverage:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -15,11 +15,8 @@ jobs:
           - {compiler: gcc, version: 11}
           - {compiler: gcc, version: 12}
           - {compiler: gcc, version: 13}
-          # - {compiler: intel-classic, version: '2024.1'}
           - {compiler: intel, version: '2024.1'}
           - {compiler: intel, version: '2023.2'}
-          # - {compiler: nvidia-hpc, version: '23.11'}
-          # - {compiler: intel-classic, version: '2023.2'}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
