--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel", "numpy", "fpm", "meson"]
+requires = ["setuptools", "wheel", "numpy", "fpm", "meson", "ninja"]
