--- a/fpm.toml
+++ b/fpm.toml
@@ -31,7 +31,7 @@ forsus = {git="https://github.com/ipqa-research/forsus"}
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
 
 [[example]]
-name       = "benchmarks"
+name       = "demo"
 source-dir = "example/extra"
 main       = "demo.f90"
 
