--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -4,7 +4,7 @@ include CONTRIBUTING.md
 include requirements.txt
 include pyproject.toml
 
-recursive-include yaeos *.py
+recursive-include yaeos *.py *.so
 
 exclude tox.ini
 exclude requirements-dev.txt
