getting better, a little more work to do

--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -4,11 +4,13 @@ include CONTRIBUTING.md
 include requirements.txt
 include pyproject.toml
 
-recursive-include yaeos *.py *.so
+recursive-include yaeos *.py
+include yaeos/compiled_module/*.so
 
 exclude tox.ini
 exclude requirements-dev.txt
 exclude _build
+exclude __pycache__
 
 recursive-exclude dist *
 recursive-exclude tests *
