--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,3 +1,14 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel", "numpy", "fpm", "meson", "ninja"]
+requires = ["fpm", "meson", "ninja", "numpy", "setuptools", "wheel"]
+
+
+[tool.black]
+line-length = 79
+target-version = ["py310"]
+
+
+[tool.pytest.ini_options]
+markers = [
+    "marker_name: marker_description",
+]
