idk how to fix all the install really... keep working tomorrow

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -27,7 +27,7 @@ deps =
 skip_install = True
 usedevelop = False
 commands =
-    pip install .
+    python3 setup.py install
     pytest tests/ {posargs}
 
 
