keep working with tox at home

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -27,7 +27,7 @@ deps =
 skip_install = True
 usedevelop = False
 commands =
-    python3 setup.py install
+    pip install .
     pytest tests/ {posargs}
 
 
