it workksss (only on linux)

--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -12,6 +12,7 @@ exclude requirements-dev.txt
 exclude _build
 exclude __pycache__
 
+recursive-exclude tmp_dir *
 recursive-exclude dist *
 recursive-exclude tests *
 recursive-exclude docs *
