fix coverage and check-manifest

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -53,7 +53,7 @@ commands = pydocstyle yaeos --convention=numpy
 skip_install = True
 usedevelop = False
 deps = check-manifest
-commands = check-manifest
+commands = check-manifest --no-build-isolation
 
 
 [testenv:docs]
@@ -67,11 +67,14 @@ commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/ht
 
 
 [testenv:coverage]
+skip_install = True
+usedevelop = False
 deps =
     {[testenv]deps}  # same dependencies of [testenv]
     coverage
     pytest-cov
 commands =
+    pip install .
     coverage erase
     pytest tests/ --cov=yaeos/ --cov-append --cov-report=term-missing
     coverage report --fail-under=100 -m
