--- a/fpm.toml
+++ b/fpm.toml
@@ -17,7 +17,7 @@ library = true
 
 [fortran]
 implicit-typing = false
-implicit-external = true
+implicit-external = false
 source-form = "free"
 
 [dependencies]
