--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -11,6 +11,7 @@ exclude tox.ini
 exclude requirements-dev.txt
 exclude _build
 exclude __pycache__
+exclude compiled_flag
 
 recursive-exclude tmp_dir *
 recursive-exclude dist *
