--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,7 +4,6 @@ envlist =
     style,
     docstyle,
     check-manifest,
-    docs,
     py310,
     py311,
     py312,
@@ -16,7 +15,7 @@ envlist =
 # =============================================================================
 [gh-actions]
 python =
-    3.10: py310, style, docstyle, check-manifest, coverage, docs
+    3.10: py310, style, docstyle, coverage, check-manifest
     3.11: py311
     3.12: py312
 
@@ -24,10 +23,9 @@ python =
 deps =
     ipdb
     pytest
-skip_install = True
-usedevelop = False
+skip_install = False
+usedevelop = True
 commands =
-    pip install .
     pytest tests/ {posargs}
 
 
@@ -43,38 +41,39 @@ deps =
 commands =
         flake8 tests/ yaeos/ {posargs}
 
+
 [testenv:docstyle]
 deps = 
        pydocstyle
        tomli
 commands = pydocstyle yaeos --convention=numpy
 
+
 [testenv:check-manifest]
 skip_install = True
 usedevelop = False
+allowlist_externals = touch, rm
 deps = check-manifest
-commands = check-manifest --no-build-isolation
+commands =
+    check-manifest
 
 
-[testenv:docs]
-description = "Invoke sphinx-build to build the HTML docs"
-whitelist_externals = make
-usedevelop = True
-skip_install = False
-changedir = docs
-deps = -r {toxinidir}/docs/requirements.txt
-commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
+; [testenv:docs]
+; description = "Invoke sphinx-build to build the HTML docs"
+; whitelist_externals = make
+; usedevelop = True
+; skip_install = False
+; changedir = docs
+; deps = -r {toxinidir}/docs/requirements.txt
+; commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
 
 [testenv:coverage]
-skip_install = True
-usedevelop = False
 deps =
     {[testenv]deps}  # same dependencies of [testenv]
     coverage
     pytest-cov
 commands =
-    pip install .
     coverage erase
     pytest tests/ --cov=yaeos/ --cov-append --cov-report=term-missing
-    coverage report --fail-under=100 -m
+    coverage report --fail-under=70 -m
