--- a/fpm.toml
+++ b/fpm.toml
@@ -26,6 +26,7 @@ forbear = {git="https://github.com/szaghi/forbear"}
 json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
+fortime = { git = "https://github.com/gha3mi/fortime.git" }
 
 [dev-dependencies]
 test-drive = {git = "https://github.com/fortran-lang/test-drive"}
