--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -95,11 +95,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install NLopt and meson
+    - name: Install dependencies
+      working-directory: ./python
       run: |
         sudo apt-get install libnlopt-dev meson
-        pip install meson
+        pip install meson tox
 
     - name: Install yaeos
+      working-directory: ./python
       run:
-        cd python; pip install .
+        pip install .
+
+    - name: tox
+      working-directory: ./python
+      run: tox -r .
