--- a/fpm.toml
+++ b/fpm.toml
@@ -61,4 +61,8 @@ name       = "huron_vidal"
 source-dir = "example/tutorials"
 main       = "huron_vidal.f90"
 
+[[example]]
+name       = "pure_psat"
+source-dir = "example/extra"
+main       = "pure_psat.f90"
 
