--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -106,6 +106,6 @@ jobs:
       run:
         pip install .
 
-    - name: tox
-      working-directory: ./python
-      run: tox -r
+#     - name: tox
+#       working-directory: ./python
+#       run: tox -r
