ensable cubic eos tutorail

--- a/fpm.toml
+++ b/fpm.toml
@@ -66,3 +66,8 @@ name       = "pure_psat"
 source-dir = "example/extra"
 main       = "pure_psat.f90"
 
+[[example]]
+name       = "cubic_eos"
+source-dir = "example/tutorials"
+main       = "cubic_eos.f90"
+
