--- a/fpm.toml
+++ b/fpm.toml
@@ -39,12 +39,12 @@ main       = "demo.f90"
 [[example]]
 name       = "basics"
 source-dir = "example/tutorials"
-main       = "basics.f90"
+main       = "1_basics.f90"
 
 [[example]]
 name       = "saturation_points"
 source-dir = "example/tutorials"
-main       = "saturation_points.f90"
+main       = "2_saturation_points.f90"
 
 [[example]]
 name       = "phase_envelope"
