--- a/fpm.toml
+++ b/fpm.toml
@@ -47,6 +47,11 @@ source-dir = "example/tutorials"
 main       = "2_saturation_points.f90"
 
 [[example]]
+name       = "phase_split"
+source-dir = "example/tutorials"
+main       = "3_phase_split.f90"
+
+[[example]]
 name       = "phase_envelope"
 source-dir = "example/tutorials"
 main       = "phase_envelope.f90"
