renamed phase envel example

--- a/fpm.toml
+++ b/fpm.toml
@@ -54,7 +54,7 @@ main       = "3_phase_split.f90"
 [[example]]
 name       = "phase_envelope"
 source-dir = "example/tutorials"
-main       = "phase_envelope.f90"
+main       = "4_phase_envelope.f90"
 
 [[example]]
 name       = "new_alpha_function"
