moved to another folder

--- a/fpm.toml
+++ b/fpm.toml
@@ -38,41 +38,41 @@ main       = "demo.f90"
 
 [[example]]
 name       = "basics"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "1_basics.f90"
 
 [[example]]
 name       = "saturation_points"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "2_saturation_points.f90"
 
 [[example]]
 name       = "phase_split"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "3_phase_split.f90"
 
 [[example]]
 name       = "phase_envelope"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "4_phase_envelope.f90"
 
 [[example]]
 name       = "new_alpha_function"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "new_alpha_function.f90"
 
 [[example]]
 name       = "huron_vidal"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "huron_vidal.f90"
 
 [[example]]
 name       = "pure_psat"
-source-dir = "example/extra"
-main       = "pure_psat.f90"
+source-dir = "example/basics"
+main       = "5_pure_psat.f90"
 
 [[example]]
 name       = "cubic_eos"
-source-dir = "example/tutorials"
+source-dir = "example/basics"
 main       = "cubic_eos.f90"
 
