move some examples

--- a/fpm.toml
+++ b/fpm.toml
@@ -58,13 +58,8 @@ main       = "4_phase_envelope.f90"
 
 [[example]]
 name       = "new_alpha_function"
-source-dir = "example/basics"
+source-dir = "example/advanced"
 main       = "new_alpha_function.f90"
-
-[[example]]
-name       = "huron_vidal"
-source-dir = "example/basics"
-main       = "huron_vidal.f90"
 
 [[example]]
 name       = "pure_psat"
@@ -72,7 +67,12 @@ source-dir = "example/basics"
 main       = "5_pure_psat.f90"
 
 [[example]]
-name       = "cubic_eos"
+name       = "huron_vidal"
 source-dir = "example/basics"
+main       = "7_huron_vidal.f90"
+
+[[example]]
+name       = "cubic_eos"
+source-dir = "example/advanced"
 main       = "cubic_eos.f90"
 
