--- a/fpm.toml
+++ b/fpm.toml
@@ -22,57 +22,58 @@ source-form = "free"
 
 [dependencies]
 stdlib = "*"
-forbear = {git="https://github.com/szaghi/forbear"}
-json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
-nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
-forsus = {git="https://github.com/ipqa-research/forsus"}
+forbear = { git = "https://github.com/szaghi/forbear" }
+json-fortran = { git = "https://github.com/jacobwilliams/json-fortran" }
+nlopt-f = { git = "https://github.com/grimme-lab/nlopt-f" }
+forsus = { git = "https://github.com/ipqa-research/forsus" }
 fortime = { git = "https://github.com/gha3mi/fortime.git" }
+ftools = { git = "https://github.com/fedebenelli/ftools" }
+
 
 [dev-dependencies]
-test-drive = {git = "https://github.com/fortran-lang/test-drive"}
+test-drive = { git = "https://github.com/fortran-lang/test-drive" }
 
 [[example]]
-name       = "demo"
+name = "demo"
 source-dir = "example/extra"
-main       = "demo.f90"
+main = "demo.f90"
 
 [[example]]
-name       = "basics"
+name = "basics"
 source-dir = "example/basics"
-main       = "1_basics.f90"
+main = "1_basics.f90"
 
 [[example]]
-name       = "saturation_points"
+name = "saturation_points"
 source-dir = "example/basics"
-main       = "2_saturation_points.f90"
+main = "2_saturation_points.f90"
 
 [[example]]
-name       = "phase_split"
+name = "phase_split"
 source-dir = "example/basics"
-main       = "3_phase_split.f90"
+main = "3_phase_split.f90"
 
 [[example]]
-name       = "phase_envelope"
+name = "phase_envelope"
 source-dir = "example/basics"
-main       = "4_phase_envelope.f90"
+main = "4_phase_envelope.f90"
 
 [[example]]
-name       = "new_alpha_function"
+name = "new_alpha_function"
 source-dir = "example/advanced"
-main       = "new_alpha_function.f90"
+main = "new_alpha_function.f90"
 
 [[example]]
-name       = "pure_psat"
+name = "pure_psat"
 source-dir = "example/basics"
-main       = "5_pure_psat.f90"
+main = "5_pure_psat.f90"
 
 [[example]]
-name       = "huron_vidal"
+name = "huron_vidal"
 source-dir = "example/basics"
-main       = "7_huron_vidal.f90"
+main = "7_huron_vidal.f90"
 
 [[example]]
-name       = "cubic_eos"
+name = "cubic_eos"
 source-dir = "example/advanced"
-main       = "cubic_eos.f90"
-
+main = "cubic_eos.f90"
