migrating to meson

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,7 +1,12 @@
 [build-system]
-build-backend = "setuptools.build_meta"
-requires = ["fpm", "meson", "ninja", "numpy", "setuptools", "wheel"]
-
+build-backend = "mesonpy"
+requires = [
+    "meson-python>=0.15.0",
+    "numpy",
+    "fpm; platform_system!='Windows'",
+    "ninja; platform_system!='Windows'", 
+    "wheel"
+]
 
 [tool.black]
 line-length = 79
