--- a/python/meson.build
+++ b/python/meson.build
@@ -63,7 +63,7 @@ f2py_gen_source = custom_target(module_name + '.c',
     '@INPUT@',
     '-m',
     module_name,
-    '--lower', '--debug', '--debug-capi'
+    '--lower'
   ]
 )
 
@@ -88,7 +88,7 @@ py.extension_module(module_name,
   include_directories: [inc_np],
   dependencies : py_dep,
   link_args: [
-    '-L' + 'fpm_build' / 'lib', '-lyaeos', '-llapack', '-lnlopt'
+    '-L' + 'fpm_build' / 'lib', '-lyaeos', '-llapack'
   ],
   subdir: python_lib / 'lib',
   install : true,
