--- a/fpm.toml
+++ b/fpm.toml
@@ -76,4 +76,6 @@ main       = "7_huron_vidal.f90"
 name       = "cubic_eos"
 source-dir = "example/advanced"
 main       = "cubic_eos.f90"
+[example.dependencies]
+nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
 
