--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,4 +24,4 @@ markers = [
 ]
 [tool.cibuildwheel]
 [tool.cibuildwheel.linux]
-before-all = "sh cibuildwheel_linux.sh"
+before-all = "yum -y update && yum -y install blas-devel lapack-devel freetype-devel"
