--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -2,6 +2,7 @@
 name = "yaeos"
 dependencies = ["numpy"]
 version = "0.1.0"
+requires-python = ">=3.10"
 
 [build-system]
 build-backend = "mesonpy"
