--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -25,4 +25,4 @@ markers = [
 ]
 [tool.cibuildwheel]
 [tool.cibuildwheel.linux]
-before-all = "yum -y update && yum -y install blas-devel lapack-devel freetype-devel"
+before-all = "yum -y update && yum -y install openblas lapack freetype"
