--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -25,4 +25,10 @@ markers = [
 ]
 [tool.cibuildwheel]
 [tool.cibuildwheel.linux]
-before-build = "yum -y update && yum -y install openblas lapack freetype"
+before-all = "yum update && yum -y install lapack-devel openblas lapack freetype"
+
+
+
+[tool.meson-python.args]
+# setup = ["-Dlapack=lapack"]
+compile = ['-j4']
