--- a/python/meson.build
+++ b/python/meson.build
@@ -30,8 +30,7 @@ incdir_f2py = run_command(py,
 
 
 # fpm?
-# fflags = '-g -fPIC -funroll-loops -fstack-arrays -Ofast -frepack-arrays -faggressive-function-elimination -fopenmp'
-fflags = '-fPIC'
+fflags = '-g -fPIC -funroll-loops -fstack-arrays -Ofast -frepack-arrays -faggressive-function-elimination -fopenmp'
 cflags = '-fPIC'
 fpm_build_dir = meson_path / 'fpm_build'
 
