--- a/python/meson.build
+++ b/python/meson.build
@@ -88,7 +88,8 @@ py.extension_module(module_name,
   include_directories: [inc_np],
   dependencies : py_dep,
   link_args: [
-    '-L' + 'fpm_build' / 'lib', '-lyaeos', '-llapack', '-static-libgfortran', '-static-libquadmath'
+    '-L' + 'fpm_build' / 'lib', '-lyaeos', 
+    '-llapack', '-static-libgfortran', '-static-libquadmath'
   ],
   subdir: python_lib / 'lib',
   install : true,
