--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -155,6 +155,7 @@ jobs:
           MACOSX_DEPLOYMENT_TARGET: "13.0"
           CIBW_BEFORE_TEST: pip install pytest
           CIBW_TEST_COMMAND: pytest {project}/python/tests
+          CIBW_BUILD_VERBOSITY: 3
 
       - uses: actions/upload-artifact@v4
         with:
