--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -149,7 +149,7 @@ jobs:
         run: python -m pip install cibuildwheel==2.19.2
 
       - name: Build wheels
-        run: python -m cibuildwheel python/ --output-dir wheelhouse
+        run: python -m cibuildwheel python/ --output-dir wheelhouse --debug-traceback
         # to supply options, put them in 'env', like:
         env:
           MACOSX_DEPLOYMENT_TARGET: "13.0"
