--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,11 +24,11 @@ markers = [
     "marker_name: marker_description",
 ]
 [tool.cibuildwheel]
+build = "cp3{10,11,12}-manylinux_x86_64"
 [tool.cibuildwheel.linux]
 before-all = "yum update && yum -y install lapack-devel openblas lapack freetype"
 
 
 
 [tool.meson-python.args]
-# setup = ["-Dlapack=lapack"]
-compile = ['-j4']
+compile = ['-vC', '-j4']
