--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -26,4 +26,4 @@ markers = [
 [tool.cibuildwheel]
 build = "cp3{10,11,12}-manylinux_x86_64"
 [tool.cibuildwheel.linux]
-before-all = "yum update && yum -y install lapack-devel openblas lapack freetype"
+before-all = "yum update && yum -y install lapack-devel"
