--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,6 +152,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse --debug-traceback
         # to supply options, put them in 'env', like:
         env:
+          CIBW_BUILD_FRONTEND: build
           MACOSX_DEPLOYMENT_TARGET: "13.0"
           CIBW_BEFORE_TEST: pip install pytest
           CIBW_TEST_COMMAND: pytest {project}/python/tests
