--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -123,6 +123,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest] #, windows-latest, macos-13, macos-14]
+        python-version: [310, 311, 312]
 
     steps:
       - uses: actions/checkout@v4
@@ -146,10 +147,14 @@ jobs:
 
       # CiBuildWheel
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.19.2
+        run: python -m pip install cibuildwheel==2.19.2 auditwheel
 
       - name: Build wheels
-        run: python -m cibuildwheel python/ --output-dir wheelhouse --debug-traceback
+        run: |
+         pip wheel python/ -w wheelhouse
+         auditwheel repair wheelhouse/*.whl
+
+        # run: python -m cibuildwheel python/ --output-dir wheelhouse --debug-traceback
         # to supply options, put them in 'env', like:
         env:
           CIBW_BUILD_FRONTEND: build
