--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -131,13 +131,13 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v5
 
-      # # Install gfortran on each OS
-      # - name: Setup Fortran Compiler
-      #   uses: fortran-lang/setup-fortran@v1
-      #   id: setup-fortran
-      #   with:
-      #       compiler: gcc
-      #       version: 12
+      # Install gfortran on each OS
+      - name: Setup Fortran Compiler
+        uses: fortran-lang/setup-fortran@v1
+        id: setup-fortran
+        with:
+            compiler: gcc
+            version: 12
 
       # Install fpm for Windows
       - name: Install fpm
