--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -148,11 +148,11 @@ jobs:
       # CiBuildWheel
       - name: Install dependencies
         run: |
-          python -m pip install cibuildwheel==2.19.2 auditwheel meson
+          python -m pip install cibuildwheel==2.19.2 auditwheel meson ninja
 
       - name: Build wheels
         run: |
-         pip wheel python/ -w wheelhouse
+         pip wheel python/ -v -w wheelhouse
          auditwheel repair wheelhouse/*.whl
 
         # run: python -m cibuildwheel python/ --output-dir wheelhouse --debug-traceback
