--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -151,9 +151,8 @@ jobs:
           python -m pip install cibuildwheel==2.19.2 auditwheel meson ninja
 
       - name: Build wheels
-        working-directory: ./python
         run: |
-         pip wheel . -v -w wheelhouse
+         pip wheel python/ -v -w wheelhouse
          auditwheel show wheelhouse/yaeos*.whl
          auditwheel repair wheelhouse/yaeos*.whl
 
