--- a/fpm.toml
+++ b/fpm.toml
@@ -72,10 +72,10 @@ name       = "huron_vidal"
 source-dir = "example/basics"
 main       = "7_huron_vidal.f90"
 
-[[example]]
-name       = "cubic_eos"
-source-dir = "example/advanced"
-main       = "cubic_eos.f90"
-[example.dependencies]
-nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
+# [[example]]
+# name       = "cubic_eos"
+# source-dir = "example/advanced"
+# main       = "cubic_eos.f90"
+# [example.dependencies]
+# nlopt-f = {git="https://github.com/grimme-lab/nlopt-f"}
 
